<resources>
    <string name="app_name">Hangman</string>
    <string name="new_game">New Game</string>
    <string name="new_game_header">Hangman</string>
    <string name="enter_name_field">Name Field</string>
    <string name="competitive_mode">Competitive Mode</string>
    <string name="casual_mode">Casual Mode</string>
    <string name="cat_animals">Animals</string>
    <string name="cat_countries">Countries</string>
    <string name="cat_food">Food</string>
    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    <string name="btn_c">C</string>
    <string name="btn_d">D</string>
    <string name="btn_e">E</string>
    <string name="btn_f">F</string>
    <string name="btn_h">H</string>
    <string name="btn_i">I</string>
    <string name="btn_j">J</string>
    <string name="btn_k">K</string>
    <string name="btn_m">M</string>
    <string name="btn_n">N</string>
    <string name="btn_o">O</string>
    <string name="btn_p">P</string>
    <string name="btn_q">Q</string>
    <string name="btn_r">R</string>
    <string name="btn_s">S</string>
    <string name="btn_t">T</string>
    <string name="btn_u">U</string>
    <string name="btn_v">V</string>
    <string name="btn_w">W</string>
    <string name="btn_x">X</string>
    <string name="btn_y">Y</string>
    <string name="btn_z">Z</string>
    <string name="btn_l">L</string>
    <string name="btng">G</string>
    <string name="btn_g">G</string>
    <string name="new_game_btn">New Game</string>
    <string name="default_wrong_guesses">Num Wrong Guesses: 0</string>
    <string name="default_score">Current Score: 0</string>
    <string name="cat_chosen">Animals</string>
    <string name="btn_hint">Hint</string>
</resources>
